@@ -12,7 +12,7 @@ to the struct rpldev_packet:
 .PP
 .nf
 struct rpldsk_packet {
-	uint16_t size;
+	uint32_t size;
 	uint8_t event, magic;
 	struct rpltime time;
 } __attribute__((packed));
