@@ -151,7 +151,7 @@ static int rpldhc_read(const char *buf, size_t count, const struct tty *tty)
 		return 0;
 
 	p.dev   = TTY_DEVNR(tty);
-	p.size  = htole16(count);
+	p.size  = htole32(count);
 	p.event = RPLEVT_READ;
 	p.magic = RPLMAGIC_SIG;
 	fill_time(&p.time);
@@ -166,7 +166,7 @@ static int rpldhc_write(const char *buf, size_t count, const struct tty *tty)
 		return 0;
 
 	p.dev   = TTY_DEVNR(tty);
-	p.size  = htole16(count);
+	p.size  = htole32(count);
 	p.event = RPLEVT_WRITE;
 	p.magic = RPLMAGIC_SIG;
 	fill_time(&p.time);
